kubernetes/apps/beets/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beets-flask
spec:
  selector:
    app: beets-flask
  ports:
    - protocol: TCP
      port: 5001
